feat(base-url): add support for non-v1 OpenAI-compatible endpoints\n\n- Adjust base URL normalization logic to preserve existing paths instead of appending /v1\n- Add explanatory notes and examples to .env_template and README.md for non-standard endpoints\n- Enhance error messages with configuration hints for non-OpenAI providers

--- a/.env_template
+++ b/.env_template
@@ -8,6 +8,8 @@ SGC_API_KEY=""
 # Optional:
 # Base URL of an OpenAI-compatible server.
 # Default: https://api.openai.com/v1
+# Note: for some providers, the OpenAI-compatible endpoint is not under /v1.
+# In that case, set this to the prefix that contains /chat/completions.
 SGC_BASE_URL="https://api.openai.com/v1"
 
 # Model name.
@@ -25,4 +27,3 @@ SGC_MAX_TOKENS="120"
 # Sampling temperature.
 # Default: 0.2
 SGC_TEMPERATURE="0.2"
-
